[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/FireTowerv1.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Tower.gd" type="Script" id=2]
[ext_resource path="res://Assets/projectile/fire1.png" type="Texture" id=3]
[ext_resource path="res://Assets/projectile/fire2.png" type="Texture" id=4]
[ext_resource path="res://Assets/projectile/fire3.png" type="Texture" id=5]
[ext_resource path="res://Assets/projectile/fire4.png" type="Texture" id=6]
[ext_resource path="res://Assets/audio/Sound Effects/mixkit-wizard-fire-woosh-1326.wav" type="AudioStream" id=7]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 28, 37.5 )

[sub_resource type="CircleShape2D" id=2]
radius = 176.011

[node name="Tower" type="Node2D"]
script = ExtResource( 2 )

[node name="Tower" type="Sprite" parent="."]
position = Vector2( 3, -1 )
scale = Vector2( 0.357362, 0.409574 )
texture = ExtResource( 1 )

[node name="TowerHead" type="AnimatedSprite" parent="."]
position = Vector2( 0.125015, -48.25 )
rotation = 0.022842
scale = Vector2( 0.932928, 0.398936 )
frames = SubResource( 3 )
frame = 2
playing = true

[node name="ShootTimer" type="Timer" parent="TowerHead"]
autostart = true

[node name="Position2D" type="Position2D" parent="TowerHead"]
rotation = 1.53855

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 2, -0.5 )
shape = SubResource( 1 )

[node name="Sight" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sight"]
position = Vector2( 1, -1 )
shape = SubResource( 2 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
bus = "SoundEffects"

[connection signal="timeout" from="TowerHead/ShootTimer" to="." method="_on_ShootTimer_timeout"]
[connection signal="area_entered" from="Sight" to="." method="_on_Sight_area_entered"]
[connection signal="area_exited" from="Sight" to="." method="_on_Sight_area_exited"]
